--- a/Web Applications/TM_Website/Html_Pages/ControlPanel/Views/Install_Libraries.html
+++ b/Web Applications/TM_Website/Html_Pages/ControlPanel/Views/Install_Libraries.html
@@ -153,7 +153,7 @@
     <p>
         
         <b><label for="fileOrUrl">File (server-side) or Url: </label></b><input type="text" id="fileOrUrl"><br /><br />
-        <b><label for="fileOrUrl">Unzip Password: </label></b><input type="text" id="unzipPassword"><br /><br />
+        <b><label for="fileOrUrl">Unzip Password: </label></b><input type="password" id="unzipPassword"><br /><br />
         <input type="button" id="install" value="Install" />
         <br />
         <br />
