--- a/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
+++ b/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
@@ -40,7 +40,7 @@
         <th>Phase</th>   
         <th>Type</th>   
         <th>Categoty</th>   
-        <th>Extenal LinksLinks</th>         
+        <th>External Links</th>         
     </tr>
     @foreach (var article in articles)
     {
