Another spelling mistake

--- a/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
+++ b/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
@@ -49,7 +49,7 @@
         <th>Technology</th>   
         <th>Phase</th>   
         <th>Type</th>   
-        <th>Categoty</th>   
+        <th>Category</th>   
         <th>External Links</th>         
     </tr>
     @foreach (var article in articles)
