Improved VirtualArticles capabilities where now it is possible to have a default 'upstream' server (in cases there is a GUID that doesn't exist in the current server Added new TMConfig settings to configure the new VirtualArticles capabilities Added ability to edit TMConfig (via TBOT page and with Webservices method) Changed the colors of the Article_Links Current_Virtual_Articles.cshtml now shows the AutoRedirectIfGuidNotFound and AutoRedirectTarget mappings

--- a/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
+++ b/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
@@ -6,28 +6,15 @@
 @{
     var tmDatabase = TM_Xml_Database.Current;
     var articles = tmDatabase.Cached_GuidanceItems;
-    var articlePaths = tmDatabase.GuidanceItems_FileMappings;
-    var index = 1;
-    var libraryPath = tmDatabase.Path_XmlLibraries;
-    var guidToFind = "577e90c9-8e44-4240-b00f-768316d63901".guid();
-    //var guidToFind = "97b5eafb-970d-4436-ae7f-3141f057e410";
-    var tmArticle = tmDatabase.tmGuidanceItem(guidToFind);
-
-    //var articleContent = tmArticle.Content.Data_Json;
-
+    var index = 0;
     var guidRexEx = @"([a-z0-9]{8}[-][a-z0-9]{4}[-][a-z0-9]{4}[-][a-z0-9]{4}[-][a-z0-9]{12})";
     //var GUIDs = articleContent.matches(guidRexEx).select((match)=> match.Value);
-
+    
     Func<String, List<string>> contentGuids =
         (articleContent) =>
             {
                 var guids = articleContent.matches(guidRexEx).select((match)=> match.Value);
-                return guids;
-                /*var guidsText = "<ul>";
-                foreach (var guid in guids)
-                    guidsText+= "<li><a href={0}>{0}</a></li>".format(guid);
-                guidsText += "</ul>";
-                return guidsText;*/
+                return guids;                
             };
     Func<string, string> getGuidType =
         (id) =>
@@ -35,8 +22,9 @@
                 if (tmDatabase.tmGuidanceItem(id.guid()).notNull())
                     return "label-success";
                 if (tmDatabase.VirtualArticles.hasKey(id.guid()))
-                    return "label-inverse";
-                return "label-important"; 
+                    return "label-info";
+                //return "label-important"; 
+                return "";
             };
 
 }
