--- a/Web Applications/TM_Website/TBot/VirtualArticles/Current_Virtual_Articles.cshtml
+++ b/Web Applications/TM_Website/TBot/VirtualArticles/Current_Virtual_Articles.cshtml
@@ -34,6 +34,16 @@
                         $scope.Mappings = data;
                     });
         };
+        
+        var loadTMConfigData = function()
+        {        
+            
+            invokeService('TMConfigFile', {}, function(data)
+                                {
+                                    $scope.AutoRedirectIfGuidNotFound = data.VirtualArticles.AutoRedirectIfGuidNotFound;
+                                    $scope.AutoRedirectTarget         = data.VirtualArticles.AutoRedirectTarget;                                                
+                                });            
+        };
 
         var setCSRFToken_And_TriggerDataLoad = function()
         {
@@ -43,6 +53,7 @@
                     {                            
                         $http.defaults.headers.post['CSRF-Token'] = data.CSRF_Token;
                         getCurrentMappings();
+                        loadTMConfigData();
                     });
         };
 
@@ -57,7 +68,12 @@
 </script>
 
 <div ng-controller="VirtualArticle">
-        
+    
+    <h4>Global settings</h4>    
+    <ul>
+        <li>Auto redirect if Guid not found:</b> <b>{{AutoRedirectIfGuidNotFound}}</b></li>
+        <li>Auto redirect target:<b> {{AutoRedirectTarget}}</b></li>
+    </ul>
     <h4>Current Virtual Mapping</h4>
 
      <table class="table table-striped table-condensed">
@@ -89,7 +105,6 @@
     <h4>Add Redirect Article </h4>        
     <form name="myForm" class="css-form" ng-submit="add_Redirect(targetId,redirectUrl)">    
         <ul>            
-
             <div class="input-prepend">
                 <span class="add-on" style="width:120px;">Target Guid Id</span>
                 <input type="text" style="width:280px;" ng-model="targetId" required/>
