Removed dependency of WebRoot for storage of TMConfig.Config The TMConfig.Config is now expected to be on the UserData Refactored config variables to make them more explicit on what they are (for example BaseFolder into WebRoot) Removed LastLogin, LoginOk and LoginFail from the User's UserStats object since it was redundant and creating git commit conflicts Renamed TMConfig Git settings and added couple new options (like autopull and autopush) Refactored some static string options into TMConsts.cs Added Extension Method to calculate the user Host name Removed sending email when user logins and logouts (nobody was looking at it, and it shouldn't be done this way) Git pull and pulls (for both Libraries and Userdata) are now controlled via config options Couple minor error detection and logging fixes

--- a/Web Applications/TM_Website/TBot/Tbot_Admin/Reset_Razor_Templates.cshtml
+++ b/Web Applications/TM_Website/TBot/Tbot_Admin/Reset_Razor_Templates.cshtml
@@ -2,7 +2,7 @@
 @using TeamMentor.CoreLib
 @using O2.DotNetWrappers.ExtensionMethods
 @{
-    var webRoot = TMConfig.BaseFolder;
+    var webRoot = TMConfig.WebRoot;
     TBot_Brain.AvailableScripts = TBot_Brain.GetAvailableScripts();
 }
 <h2>Current Razor Templates</h2>
