--- a/Web Applications/TM_Website/TBot/Admin/LiveData/DebugInfo.cshtml
+++ b/Web Applications/TM_Website/TBot/Admin/LiveData/DebugInfo.cshtml
@@ -1,12 +1,13 @@
 ﻿
+@using System
+@using System.Collections.Generic
 @using TeamMentor.CoreLib
 @using O2.DotNetWrappers.ExtensionMethods
 @using O2.Kernel
-@using System.Web.Razor.Text
 @using FluentSharp
 
 @{
-    var tmRest    = (TeamMentor.CoreLib.TM_REST) @Model;
+    var tmRest    = (TM_REST) @Model;
     var session   = HttpContextFactory.Session;
     var log_Lines = tmRest.Admin_Logs().trim().fixCRLF().lines().removeEmpty().reverse(); 
 }
@@ -20,13 +21,12 @@
 <strong>TM_Xml_Database.Current.Path_XmlLibraries</strong>         : @TM_Xml_Database.Current.Path_XmlLibraries
 <strong>TM_UserData.Current.Path_UserData</strong>                 : @TM_UserData.Current.Path_UserData
 <strong>TM_UserData.Current.Path_UserData_Base</strong>            : @TM_UserData.Current.Path_UserData_Base
-<strong>TM_UserData.Current.Git_UserData</strong>                  : @TM_UserData.Current.Git_UserData
 <strong>AppDomain.CurrentDomain.BaseDirectory</strong>             : @AppDomain.CurrentDomain.BaseDirectory
 <strong>O2 Temp Dir</strong>                                       : @PublicDI.config.O2TempDir<br /></pre>
     </ul>        
 <br/>
  
-<h5>Session Values</h2>        
+<h5>Session Values</h5>        
     <ul>
         @foreach (string key in session.Keys)
         {
