Adding MarkdownDeep NuGet package Some refactoring on MVC test page Added System.Web.WebPages.Razor.dll since Azure doesn't have it

--- a/Web Applications/TM_Website/MVC/Views/Index.cshtml
+++ b/Web Applications/TM_Website/MVC/Views/Index.cshtml
@@ -5,6 +5,9 @@
     Layout = "_Layout.cshtml";
 }
 
-Some content goes here
-<hr/>
-@ViewBag.HelloMessage
+<h5>@ViewBag.HelloMessage</h5>
+
+<pre>
+    this is some text relevant to this view
+</pre>
+
