Working PoC of Controllers with View and Edit TM articles in Markdown format Added Web editor MarkdownDeep files

--- a/Web Applications/TM_Website/MVC/Views/_Layout.cshtml
+++ b/Web Applications/TM_Website/MVC/Views/_Layout.cshtml
@@ -12,7 +12,7 @@
         <br/>
         <div class='container-fluid'>
             <div class='alert alert-info'>
-                <a href="/rest/tbot/run/Commands"><b>TBot</b></a> - your friendly TeamMentor Bot
+                <b>TeamMentor</b> in Markdown
             </div>                
             <ul>
                                     
