Add Markdown support to the article viewer (on both stand-alone viewer and preview mode) Added Markdown edit buttons to Article viewer Moved markdown server-side transformsation to TeamMentor.CoreLib Added webservice method to perform markdown transformations (called 'MarkdownTransform') Added Javascript herlper method to call MarkdownTransform Set markdown save redirect to be the normal article viewer Changed a bit the layout of the Markdown editor page (with link back to the article) Added Markdown to the list of DataType in the NotepadEditor (so that an article can be changed from Html/Wikitext to markdown)

--- a/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
+++ b/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
@@ -19,27 +19,24 @@
                 ExtraMode: true,
                 SafeMode: true
             });
+            $("#backToArticle").click(function()
+                {
+                    document.location = "/article/@ViewBag.ArticleId";
+                });  
         })
 </script>
 
 
 <form action="/Markdown/SaveContent" method="post">
-    <h5>Editor: </h5>   
+    
+    <h3>Markdown Editor</h3>       
+    <input class="btn btn-Info" type="button" value="Back to article" id="backToArticle" />    
+    <input class="btn btn-primary" type="submit" value="Save" />
     <div class="mdd_toolbar"></div>   
     <input name="articleId" value="@ViewBag.ArticleId" type="hidden"/>
-    @Html.TextArea("Content", new { @class="mdd_editor",rows=5})
+    @Html.TextArea("Content", new { @class="mdd_editor",rows=10})
     <div class="mdd_resizer"></div>
-      
-    <p>
-        <h5>Preview: </h5>    
-    </p> 
-    
-    
     <div class="well mdd_preview"></div>
-
-    
-    <p><input class="btn btn-primary" type="submit" value="Save" /></p>
-
 </form>
 
 
