--- a/Web Applications/TM_Website/TBot/Views/User_Edit.cshtml
+++ b/Web Applications/TM_Website/TBot/Views/User_Edit.cshtml
@@ -65,7 +65,7 @@ function TMUser($scope,$http)
 
             <div class="input-prepend">
                 <span class="add-on" style="width:120px;">UserName</span>
-                <input type="text" style="width:250px;" ng-model="userData.UserName" required maxlength="30"/>
+                <input type="text" style="width:250px;" ng-model="userData.UserName" disabled maxlength="30"/>
             </div><br/>
             <div class="input-prepend">
                 <span class="add-on" style="width:120px;">Email</span>
