--- a/Web Applications/TM_Website/TBot/LibraryData/Articles.cshtml
+++ b/Web Applications/TM_Website/TBot/LibraryData/Articles.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System
 @using TeamMentor.CoreLib;
-@using O2.DotNetWrappers.ExtensionMethods;
+@using FluentSharp.CoreLib;
 
 @{
     var tmDatabase = TM_Xml_Database.Current;
