--- a/Web Applications/TM_Website/TBot/Admin/Config/View_SecretData.cshtml
+++ b/Web Applications/TM_Website/TBot/Admin/Config/View_SecretData.cshtml
@@ -1,6 +1,6 @@
 ﻿
+@using FluentSharp.CoreLib
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
 
 <h4>SecretData</h4>
 <pre>@TM_UserData.Current.SecretData.toXml()</pre>
