--- a/Web Applications/TM_Website/TBot/Admin/Import Legacy Users.cshtml
+++ b/Web Applications/TM_Website/TBot/Admin/Import Legacy Users.cshtml
@@ -1,10 +1,11 @@
 ﻿
 @using System.Xml.Linq
+@using FluentSharp.BCL
+@using FluentSharp.CoreLib
+@using FluentSharp.CoreLib.API
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
-@using O2.DotNetWrappers.DotNet
 
-@{
+@{                
     var userData = TM_UserData.Current;
     var userFolder = userData.getTmUsersFolder();
     var tmUsersXml = userFolder.pathCombine("..\\tmusers.xml");
