--- a/Web Applications/TM_Website/TBot/Admin/LiveData/DebugInfo.cshtml
+++ b/Web Applications/TM_Website/TBot/Admin/LiveData/DebugInfo.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @using System
 @using System.Collections.Generic
+@using FluentSharp.CoreLib
+@using FluentSharp.CoreLib.API
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
-@using O2.Kernel
 @using FluentSharp
 
 @{
