--- a/Web Applications/TM_Website/TBot/Admin/LiveData/IISSessions.cshtml
+++ b/Web Applications/TM_Website/TBot/Admin/LiveData/IISSessions.cshtml
@@ -1,8 +1,7 @@
 ﻿
-@using System.Web
 @using System.Web.SessionState;
 @using System.Collections;
-@using O2.DotNetWrappers.ExtensionMethods
+@using FluentSharp.CoreLib
 
 Here are the current IIS sessions (and its Session Variables):
 <pre>
