--- a/Web Applications/TM_Website/TBot/Messaging/Send_Test_Email.cshtml
+++ b/Web Applications/TM_Website/TBot/Messaging/Send_Test_Email.cshtml
@@ -67,7 +67,7 @@
         <div class="control-group">
             <label class="control-label"/>
             <div class="controls">      			
-                <button class="btn btn-primary">Send</button></br/>      			      			
+                <button class="btn btn-primary">Send</button><br/>      			      			
             </div>
         </div>   
   </form>        	
