--- a/Web Applications/TM_Website/TBot/NGit/GitStatus.cshtml
+++ b/Web Applications/TM_Website/TBot/NGit/GitStatus.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @using System
-@using O2.DotNetWrappers.ExtensionMethods
+@using FluentSharp.CoreLib
+@using FluentSharp.Git
 @using TeamMentor.CoreLib
-@using O2.FluentSharp
 @using Sharpen
 @using NGit
 @using NGit.Diff
@@ -11,6 +11,7 @@
 @using NGit.Treewalk.Filter
 
 @{
+    
     int max;
     TM_UserData userData;
     string userDataLocation;
@@ -36,35 +37,20 @@
     {
         @:<hr /><b>Exception:</b> @ex.Message <pre>@ex.StackTrace</pre>
         return;
-    }                    
+    }  
+                    
 }
-@if (userDataLocation.isGitRepository())
+@if (userDataLocation.isGitRepository().isFalse())
 {
-    <span> not a git repo</span>
+    <span> @userDataLocation is not a git repo</span>
+    return;  
 }
 
 @{
-    var nGit = userDataLocation.git_Open();
-    var gitRepository = nGit.Repository;
-
     
-    Func<List<string>> getRepoFiles =
-        () =>
-            {
-                var lastCommitId = nGit.Repository.Resolve(Constants.HEAD);
-                var revWalk = new RevWalk(nGit.Repository);
-                var commit = revWalk.ParseCommit(lastCommitId);
-                var treeWalk = new TreeWalk(nGit.Repository);
-                var tree = commit.Tree;
-                treeWalk.AddTree(tree);
-                treeWalk.Recursive = true;
-                var repoFiles = new List<string>();
-                while (treeWalk.Next())
-                {
-                    repoFiles.Add(treeWalk.PathString);
-                }
-                return repoFiles;
-            };
+    var nGit = userDataLocation.git_Open();
+    
+    //var gitRepository = nGit.Repository;  
 }
 <h4>Git Status</h4>
 <h5>User Data</h5>
@@ -80,38 +66,63 @@
         
     <b>Files:</b><br/>
     <ul>
-        @foreach (var file in getRepoFiles().sort())
+        @foreach (var file in nGit.files().sort())
         {
             <li><a href="GitDiff_UserData_File?file=@file">@file</a></li>
         }   
     </ul>       
-    <br/>
+<br/>
+
     <b>Commits:</b><br/>
     <ul>
         
         <table class="table table-striped table-condensed">
             <tr>
-                <th>Hash</th>
+                <th>Who commited</th>
                 <th>Date</th>
                 <th>Message</th>            
                 <th>Diff</th>
             </tr>   
         
-        @foreach (var xrefLog in nGit.reflogs_Raw().take(max))
+        
+         @foreach (var xrefLog in nGit.commits().take(max))
         {            
             <tr>
-                <td>@xrefLog.GetNewId().Name</td>
+                <td>@xrefLog.author_Name()</td>
+                <td>@xrefLog.when()</td>
+                <td>@xrefLog.message().subString(0,1000)</td>                
+            </tr>
+        }
+        @foreach (var xrefLog in nGit.refLogs_Raw().take(max))
+        {            
+            <tr>
+                <td>@xrefLog.GetWho().GetName()</td>
                 <td>@xrefLog.GetWho().GetWhen()</td>
-                <td>@xrefLog.GetComment()</td>
+                <td>@xrefLog.GetComment().subString(0,1000)</td>
                 <td><a href="GitDiff_UserData_Commit?fromId=@xrefLog.GetOldId().Name&toId=@xrefLog.GetNewId().Name">view</a></td>
             </tr>
-         }                
+        }      
+        @*          
+            @foreach (var commit in nGit.commits().take(max))
+        {            
+                
+                
+            <tr>
+                <td>@commit.author_Name()</td>
+                <td>@commit.when()</td>
+                <td>@commit.message()</td>
+                <td><a href="GitDiff_UserData_Commit?fromId=@commit.sha1&toId=@commit.sha1()">view</a></td>
+            </tr>
+            
+         }  
+         *@              
         </table>    
 </ul>
 <h4>Xml Library Data</h4>
 <ul>
 
-@{
+    @{
+        
     nGit = xmlLibraryLocation.git_Open();
 }
 Location: @xmlLibraryLocation  , is Git: @xmlLibraryLocation.isGitRepository()
@@ -121,7 +132,12 @@ Location: @xmlLibraryLocation  , is Git: @xmlLibraryLocation.isGitRepository()
     
       <b>Commits:</b><br/>
     <ul>
-        
+        @{
+            if (@xmlLibraryLocation.isGitRepository().isFalse())
+            {
+                return;
+            }
+        }
         <table class="table table-striped table-condensed">
             <tr>
                 <th>Hash</th>
@@ -130,7 +146,7 @@ Location: @xmlLibraryLocation  , is Git: @xmlLibraryLocation.isGitRepository()
                 <th>Diff</th>
             </tr>   
         
-        @foreach (var xrefLog in nGit.reflogs_Raw().take(max))
+        @foreach (var xrefLog in nGit.refLogs_Raw().take(max))
         {            
             <tr>
                 <td>@xrefLog.GetNewId().Name</td>
@@ -140,6 +156,7 @@ Location: @xmlLibraryLocation  , is Git: @xmlLibraryLocation.isGitRepository()
             </tr>
          }                
         </table>    
+    </ul>
 </ul>
 
 
