--- a/Web Applications/TM_Website/TBot/Tbot_Admin/O2_Scripts.cshtml
+++ b/Web Applications/TM_Website/TBot/Tbot_Admin/O2_Scripts.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@using O2.DotNetWrappers.ExtensionMethods;
+@using FluentSharp.CoreLib;
 
 @{
     var tmRest         = (TeamMentor.CoreLib.TM_REST) @Model;
