--- a/Web Applications/TM_Website/TBot/Tbot_Admin/Reset_Razor_Templates.cshtml
+++ b/Web Applications/TM_Website/TBot/Tbot_Admin/Reset_Razor_Templates.cshtml
@@ -1,6 +1,6 @@
 ﻿
+@using FluentSharp.CoreLib
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
 @{
     var webRoot = TMConfig.WebRoot;
     TBot_Brain.AvailableScripts = TBot_Brain.GetAvailableScripts();
