--- a/Web Applications/TM_Website/TBot/Tests/Commands.cshtml
+++ b/Web Applications/TM_Website/TBot/Tests/Commands.cshtml
@@ -1,6 +1,6 @@
 ﻿
+@using FluentSharp.CoreLib
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
 @{
     var baseFolder = TBot_Brain.TBotScriptsFolder();
     var scripts = TBot_Brain.TBotScriptsFiles();
