--- a/Web Applications/TM_Website/TBot/Users/New Random User.cshtml
+++ b/Web Applications/TM_Website/TBot/Users/New Random User.cshtml
@@ -1,6 +1,6 @@
 ﻿
+@using FluentSharp.CoreLib
 @using TeamMentor.CoreLib
-@using O2.DotNetWrappers.ExtensionMethods
 
 @{
     var userData = TM_UserData.Current;
