--- a/Web Applications/TM_Website/TBot/Views/User_View.cshtml
+++ b/Web Applications/TM_Website/TBot/Views/User_View.cshtml
@@ -1,7 +1,6 @@
 ﻿
-@using O2.DotNetWrappers.ExtensionMethods
+@using FluentSharp.CoreLib
 @using TeamMentor.CoreLib
-@using FluentSharp
 
 @{
     var userData = TM_UserData.Current;
@@ -54,7 +53,7 @@
             <ul>                
                 <li><a href="/passwordForgot" target="_blank" >open password forgot page</a> (you will need to provide the user's email)</li>
                 <li><a href="/rest/redirect/passwordReset/@tmUser.UserID" target="_blank" >open password reset page</a> with valid token (use to change user's pwd)</li>
-            </ul
+            </ul>
         </li>
     </ul>
 @*    <ul>
