--- a/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
+++ b/Web Applications/TM_Website/TBot/VirtualArticles/Article_Links.cshtml
@@ -1,7 +1,5 @@
-﻿@using System
-@using System.Collections.Generic
-@using TeamMentor.CoreLib;
-@using O2.DotNetWrappers.ExtensionMethods;
+﻿@using TeamMentor.CoreLib;
+@using FluentSharp.CoreLib;
 
 @{
     var tmDatabase = TM_Xml_Database.Current;
