Updated to Dev 9 Updated FluentSharp dlls

--- a/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
+++ b/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
@@ -30,7 +30,7 @@
 
 <form action="/Markdown/SaveContent" method="post">
     
-    <h3>Markdown Editor</h3>       
+   <h3>Markdown Editor</h3>       
     <input class="btn btn-Info" type="button" value="Back to article" id="backToArticle" />    
     <input class="btn btn-primary" type="submit" value="Save" />
     <div class="mdd_toolbar"></div>   
@@ -38,6 +38,39 @@
     @Html.TextArea("Content", new { @class="mdd_editor",rows=10})
     <div class="mdd_resizer"></div>
     <div class="well mdd_preview"></div>
+
+@{
+    
+    return;
+    
+    
+}
+@*    
+    <hr />
+    <h1>Previous versions</h1>
+
+    <script src="http://twitter.github.io/bootstrap/assets/js/bootstrap-collapse.js" ></script>
+
+    <div class="accordion" id="accordion2">
+        @foreach(var version in ViewBag.PreviousVersions)
+        {        
+            
+            <div class="accordion-group">
+                <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                        <b>When: @version.When</b> <b>by:</b>  @version.Author
+                    </a>
+                </div>
+                <div id="collapseOne" class="accordion-body collapse in">
+                    <div class="accordion-inner">
+                        <pre>@version.FileContents</pre>
+                    </div>
+                </div>
+            </div>            
+        
+        }
+    </div>
+    *@
 </form>
 
 
