--- a/Web Applications/TM_Website/TBot/NGit/GitDiff_UserData_Commit.cshtml
+++ b/Web Applications/TM_Website/TBot/NGit/GitDiff_UserData_Commit.cshtml
@@ -42,7 +42,7 @@
             };
                                 
     var repo = userDataLocation.git_Open().Repository;    
-    var diffLines = getDiff(repo, fromId, toId).fixCRLF().lines();
+    var diffLines = getDiff(repo, fromId, toId).fix_CRLF().lines();
     var diffLines_withData = diffLines.where((line) => line.starts("+") || line.starts("-"));
     
 }
