Set version to Dev 4 - 10 Fixed couple bugs on the way the article diff was being found Set the MarkdownDeep extra mode to false since it was causing a couple probs with the existing HTML articles All HTML transformations are now done in Markdown Started removing code that is not doing to be needed anymore (like the HTML Sanitization and Preview page)

--- a/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
+++ b/Web Applications/TM_Website/MVC/Views/Markdown_Editor.cshtml
@@ -17,7 +17,7 @@
         {            
             $("textarea.mdd_editor").MarkdownDeep({
                 help_location:"/javascript/MarkdownDeep/mdd_help.htm",                
-                ExtraMode: true,
+                ExtraMode: false,
                 SafeMode: @(MarkdownDeep_ExtensionMethods.SafeMode ? "true" : "false")
             });
             $("#backToArticle").click(function()
@@ -36,7 +36,7 @@
     <input class="btn btn-primary" type="submit" value="Save" />
      (<a href = "/article/@ViewBag.ArticleId">back to article</a>)
     . 
-     (<a href = "/GitLibrary/File?path=_GuidanceItems/@(ViewBag.ArticleId).xml" target="_blank">View File History and diff</a>)
+     (<a href = "/GitLibrary/File?path=@ViewBag.ArticleId" target="_blank">View File History and diff</a>)
     
     <br/>
     <br />
